--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Form Unit Test</title>
+    <title>Hook Form</title>
   </head>
   <body>
     <div id="root"></div>
